Close #1, X-Forwarded-For support

--- a/samples/minimum-full.yaml
+++ b/samples/minimum-full.yaml
@@ -12,6 +12,9 @@ paths:
         - name: Authorization
           in: header
           type: string
+        - name: X-Forwarded-For
+          in: header
+          type: string
         - name: userId
           in: path
           type: string
