--- a/samples/minimum-full.yaml
+++ b/samples/minimum-full.yaml
@@ -19,6 +19,9 @@ paths:
           in: path
           type: string
           required: true
+        - name: limit
+          in: query
+          type: integer
       responses:
         200:
           description: OK
